# pavlok-cli-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs
