[package]
name = "pavlok-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rustafarian-dev/pavlok-cli-rs"
description = "A cli for communicating with the Pavlok API"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "env"] }
pavlok = "0.1.0"
